# rust_shader_toy

./: Cargo.toml  README.md
src/: app.rs  main.rs  shader.fs.glsl  shader.rs
