[package]
name = "opengl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
ultraviolet = "0.9.2"
beryllium = "0.13.3"

[dev-dependencies]
imagine = "0.5.1"

