[package]
name = "opengl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
beryllium = "0.13.3"
# usefull dependencies for futher dev:
# ultraviolet = "0.9.2"
# bytemuck = "1"

[dev-dependencies]
imagine = "0.5.1"

